[package]
name = "lyra_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.32.1", default-features = true }
image = "0.24.6"
imgui = "0.10.0"
imgui-glium-renderer = "0.10"
imgui-winit-support = "0.10"